		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


R 2.1.0
=======

Support for seek() on > 2Gb files has been added.

You will be asked to select a CRAN mirror when downloading/updating
packages unless options("repos") has already been set in your session,
e.g. in your .Rprofile file or from the 'Select CRAN mirror' menu
item.  (In batch use, not having set a mirror will lead to an error.)
BDR's supplementary collection is now included in the default
options("repos"): if you want to include it explicitly set something like
options(repos=c(some_cran_mirror, http://www.stats.ox.ac.uk/pub/RWin"))

There is a new item on the Packages menu to set repositories, e.g.
CRAN, Bioconductor, Omegahat.  You can modify the list (and its
defaults): see the rw-FAQ Q2.9.

The new (in R 2.0.0) graphics pars "lend", "ljoin" and "lmitre" are
now implemented for the Windows devices.

`Writing R Extensions' now documents how to interface a front-end
directly to R.dll, and there are some new convenience functions for
such front-ends.

R CMD / Rcmd now set HOME if unset, e.g. for use in Rcmd check.

The installer now offers the option of a `quick launch icon" for R
(by default unchecked).

par(ask = TRUE) now takes input from the graphics window, rather than
from the console.

Rcmd REMOVE works more similarly to Unix, setting the default library
from R_LIBS if the latter is set.

install.packages() can install source packages as well as binary ones.

shQuote() now defaults to type="cmd" on Windows.

R can now be built with Unicode support on Win9x and WinME.  See
src/gnuwin32/MkRules: this is currently experimental and not needed
for standard builds.

R can now be built with support for multibyte and variable-width
character sets, e.g. for Japanese. See README.rw????.  The standard
installer includes both single-byte and multi-byte builds.

select.list() now looks up the current font size and chooses its