@@ -566,14 +566,14 @@ rinstaller:
 	@$(MAKE) -C installer clean
 
 crandir:
-	$(MKDIR) -p cran/mini
+#	$(MKDIR) -p cran/mini
 	$(CP) installer/rw*.exe cran
 	$(CP) CHANGES cran/CHANGES.$(RPREFIX)
 	$(CP) ../../NEWS cran/NEWS.$(RPREFIX)
 	(cd cran;\
 	 $(ECHO) 'cat(md5sum("$(RPREFIX).exe"),"*$(RPREFIX).exe")' \
          | $(RHOME)/bin/rterm --vanilla --slave R_DEFAULT_PACKAGES=tools >md5sum.txt)
-	$(CP) installer/mini*.* cran/mini
+#	$(CP) installer/mini*.* cran/mini
 	$(CP) ../../doc/html/rw-FAQ.html cran
 	(cd cran/mini;\
 	 $(ECHO) 'fn <- dir(pattern="mini*"); cat(paste(md5sum(fn)," *",fn,sep=""),sep="\n")' \
@@ -597,10 +597,10 @@ crandir:
 	  -e "s/@DATE@/$(DATE)/g" \
 	  -e "s/@FULLVERSION@/$(FULLVERSION)/g" cran/rpatched.in > cran/rpatched.html	  
 	$(SED) -e s/@RWVER@/$(RPREFIX)/g cran/release.in > cran/release.htm
-	$(SED) -e s/@RWVER@/$(RPREFIX)/g \
-	  -e s/@RVER@/$(RVER)/g \
-	  -e "s/@DATE@/$(DATE)/g" \
-	  -e "s/@FULLVERSION@/$(FULLVERSION)/g" cran/mini.in > cran/mini/index.html
+#	$(SED) -e s/@RWVER@/$(RPREFIX)/g \
+#	  -e s/@RVER@/$(RVER)/g \
+#	  -e "s/@DATE@/$(DATE)/g" \
+#	  -e "s/@FULLVERSION@/$(FULLVERSION)/g" cran/mini.in > cran/mini/index.html
 
 rbuild-no-mbcs:
 	@$(MAKE) --no-print-directory fixfiles
