@@ -26,27 +26,17 @@ on the internet.
 Installation
 ============
 
-The distribution can be obtained in two versions:
+The distribution is distributed as a 25Mb installer @RWVER@.exe.
 
-1) A 24Mb file @RWVER@.exe.  Just run this for a Windows-XP style
-installer.  It contains all the R components, and you can select what
-want installed.  If you are using an East Asian version of Windows
-(certainly Chinese, Japanese, Korean and perhaps Thai and Vietnamese)
-you need to select the component which supplies support for those
-languages.  (This replace R.dll with a version that is aware of
-multi-byte locales and depends on mscvp60.dll.)
+Just run this for a Windows-XP style installer.  It contains all the R
+components, and you can select what want installed.  If you are using
+an East Asian version of Windows (certainly Chinese, Japanese, Korean
+and perhaps Thai and Vietnamese) you need to select the component
+which supplies support for those languages.  (This replace R.dll with
+a version that is aware of multi-byte locales and depends on
+mscvp60.dll.)
 
-
-2) Files miniR.exe and miniR-1.bin to miniR-7.bin.  If you need to,
-put miniR.exe and miniR-1.bin on one floppy, and miniR-2.bin to
-miniR-7.bin on separate floppies.
-
-This is a small installation, containing text help and the
-Introduction to R and Data Import/Export manuals in PDF.  There is no
-package tcltk, and no documentation for packages grid or survival.
-
-
-For more details, including command-line options for the installers 
+For more details, including command-line options for the installer
 and how to uninstall, see the rw-FAQ.  If you are reading this as part of
 an installed version of R, that's both file rw-FAQ in this directory
 and file doc\html\rw-FAQ.html.
@@ -63,10 +53,10 @@ Rgui.exe runs as a standard Windows GUI executable and provides an R
 console in its own window.  It takes the standard R command-line
 arguments; these are most easily set by making a shortcut to
 ...\@RWVER@\bin\Rgui.exe and adding the arguments in the Target field.
-Set the `Start in' field of the shortcut to the directory you want to use
-as the working directory (where workspaces and files are saved to and
-loaded from).  The @RWVER@.exe and miniR.exe installers create a
-shortcut on the desktop for you (by default).
+Set the `Start in' field of the shortcut to the directory you want to
+use as the working directory (where workspaces and files are saved to
+and loaded from).  The installers creates a shortcut on the desktop
+for you (by default).
 
 You have a choice of interface: SDI (separate windows) or MDI
 (multiple child windows in one large window).  MDI is the default:
