@@ -37,14 +37,9 @@ is available in the <a href="rdevel.html">r-devel release</a>.</p>
   </tr>
   <tr>
     <td width="19%" valign="top"><a href="@RWVER@.exe">@RWVER@.exe</a></td>
-    <td width="81%">Setup program (about 23 megabytes). Please download this 
+    <td width="81%">Setup program (about 25 megabytes). Please download this 
     from a <a href="http://cran.r-project.org/mirrors.html">mirror near you</a>. <br>
     This corresponds to the file named <b>SetupR.exe</b> in pre-1.6.0 releases.</td>
-  </tr>
-  <tr>
-    <td width="19%" valign="top"><a href="mini">mini</a></td>
-    <td width="81%">Collection of diskette-sized files. Again, please download from a <a
-    href="http://cran.r-project.org/mirrors.html">mirror</a>.</td>
   </tr>
   <tr>
     <td width="19%" valign="top"><a href="old">old</a></td>
