@@ -116,13 +116,14 @@ Name: "custom"; Description: "Custom installation"; Flags: iscustom
 Name: "main"; Description: "Main Files"; Types: user compact full CJK custom; Flags: fixed
 Name: "chtml"; Description: "Compiled HTML Help Files"; Types: user full CJK custom
 Name: "html"; Description: "HTML Help Files"; Types: user full CJK custom
-Name: "latex"; Description: "Latex Help Files"; Types: full custom
 Name: "manuals"; Description: "On-line (PDF) Manuals"; Types: user full CJK custom
-Name: "refman"; Description: "PDF Reference Manual"; Types: full custom
-Name: "libdocs"; Description: "Docs for Packages grid and survival"; Types: user full CJK custom
 Name: "devel"; Description: "Source Package Installation Files"; Types: user full CJK custom
 Name: "tcl"; Description: "Support Files for Package tcltk"; Types: user full CJK custom
+Name: "libdocs"; Description: "Docs for Packages grid and survival"; Types: user full CJK custom
+Name: "trans"; Description: "Message Translations"; Types: user full custom
 Name: "mbcs"; Description: "Version for East Asian languages"; Types: CJK custom
+Name: "latex"; Description: "Latex Help Files"; Types: full custom
+Name: "refman"; Description: "PDF Reference Manual"; Types: full custom
 Name: "Rd"; Description: "Source Files for Help Pages"; Types: full custom
 
 [Files]
@@ -248,7 +249,7 @@ sub listFiles {
 	    $mini = 0;
 	} elsif (m/^share\\locale/ 
 		 || m/^library\\[^\\]*\\po/) { # needs iconv
-	    $component = "main";
+	    $component = "trans";
 	    $mini = 0;
 	} elsif ($_ eq "bin\\Rmbcs.dll") {
 	    $component = "mbcs";
